Cambios en el scroll

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,7 +12,13 @@ html {
     font-size: 62.5%;
     box-sizing: border-box;
     /* Hack para Box Model */
-    scroll-snap-type: mandatory;
+    scroll-snap-type: y mandatory;
+}
+.servicios,
+.navegacion-principal,
+.formulario {
+    scroll-snap-align: center;
+    scroll-snap-stop: always;
 }
 
 *,
