Cambio en los parrafos de Mis Servicios

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -63,7 +63,8 @@ body {
 
 .boton:hover {
     cursor: pointer;
-    transform: scale(1.02);
+    transform: scale(1.05);
+    transition-duration: .1s;
 }
 
 .sombra {
